# https-deeplearning-ai-starting-ragchatbot-codebase

./: frontend-changes.md  pyproject.toml
.github/workflows/: claude.yml
backend/: app.py  search_tools.py
backend/tests/: conftest.py  test_api.py
frontend/: .eslintrc.json  .prettierrc  index.html  package.json  script.js  style.css
