[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "anthropic==0.58.2",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
# Discover tests inside backend/tests/ when running pytest from the repo root.
testpaths = ["backend/tests"]
# Add backend/ to sys.path so backend modules are importable without a package prefix.
pythonpath = ["backend"]
# Shorter tracebacks; -v can be added on the CLI when needed.
addopts = "--tb=short"
